# computer-use-agent-toolkit

./: .gitignore  README.md
examples/: README.md
examples/python/: 01_simple_click.py  02_form_filler.py  03_browser_navigator.py  04_custom_tools.py  05_workflow_hooks.py  06_multi_system_integration.py  07_human_in_the_loop.py  08_data_extraction.py  09_cross_application.py  10_error_recovery.py
examples/typescript/: 01_simple_click.ts  02_form_filler.ts  03_browser_navigator.ts  04_custom_tools.ts  05_workflow_hooks.ts
python/: LICENSE  README.md  first-time-setup.sh  pyproject.toml
python/computer_use_agent/: __init__.py  actions.py  agent.py  hooks.py  screen.py  tools.py  types.py  utils.py  workflow.py
python/examples/: README.md  browser_navigator.py  custom_tool_example.py  form_filler.py  human_in_the_loop.py  multi_system_integration.py  simple_click.py  workflow_hooks_example.py
python/tests/: __init__.py  test_actions.py  test_hooks.py  test_screen.py  test_tools.py  test_types.py  test_utils.py  test_workflow.py
typescript/: README.md  package.json  tsconfig.json
typescript/examples/: custom-tool-example.ts  simple-click.ts  workflow-hooks-example.ts
typescript/src/: actions.ts  agent.ts  hooks.ts  index.ts  screen.ts  tools.ts  types.ts  workflow.ts
